Deleted files other than map.js

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,172 +1,4 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-* {
-  overflow-x: hidden;
-  padding: 0px !important;
-  margin: 0px !important;
-}
-.v8_12 {
-  width: 100%;
-  height: 1024px;
-  background: rgba(255,255,255,0.5);
-  opacity: 1;
-  position: relative;
-  top: 0px;
-  left: 0px;
-  overflow: hidden;
-}
-.v8_78 {
-  width: 100%;
-  height: 930px;
-  background: rgba(211,176,176,1);
-  opacity: 1;
-  position: absolute;
-  top: 94px;
-  left: 0px;
-  overflow: hidden;
-}
-.v13_0 {
-  width: 100%;
-  height: 96px;
-  background: rgba(255,0,53,1);
-  opacity: 1;
-  position: relative;
-  top: 0px;
-  left: 0px;
-  border: 1px solid rgba(0,0,0,1);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  overflow: hidden;
-}
-.v15_9 {
-  width: 100%;
-  height: 96px;
-  background: rgba(255,0,53,1);
-  opacity: 1;
-  position: relative;
-  top: 0px;
-  left: 0px;
-  border: 1px solid rgba(0,0,0,1);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  overflow: hidden;
-}
-.v13_11 {
-  width: 290px;
-  height: 58px;
-  background: rgba(131,3,205,1);
-  opacity: 1;
-  position: absolute;
-  top: 472px;
-  left: 580px;
-  border-top-left-radius: 100px;
-  border-top-right-radius: 100px;
-  border-bottom-left-radius: 100px;
-  border-bottom-right-radius: 100px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  overflow: hidden;
-}
-.v15_8 {
-  width: 290px;
-  height: 58px;
-  background: rgba(131,3,205,1);
-  opacity: 1;
-  position: absolute;
-  top: 555px;
-  left: 580px;
-  border-top-left-radius: 100px;
-  border-top-right-radius: 100px;
-  border-bottom-left-radius: 100px;
-  border-bottom-right-radius: 100px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  overflow: hidden;
-}
-.v13_13 {
-  width: 254px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 483px;
-  left: 598px;
-  font-family: Scada;
-  font-weight: Regular;
-  font-size: 36px;
-  opacity: 1;
-  text-align: center;
-}
-.v13_14 {
-  width: 217px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 559px;
-  left: 617px;
-  font-family: Scada;
-  font-weight: Regular;
-  font-size: 36px;
-  opacity: 1;
-  text-align: center;
-}
-.v13_16 {
-  width: 463px;
-  height: 290px;
-  background: url("./images/v13_16.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  opacity: 1;
-  position: absolute;
-  top: 136px;
-  left: 500px;
-  overflow: hidden;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-
 .leaflet-container {
-  width: 100wh;
+  width: 100vw;
   height: 100vh;
 }
