--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -1,162 +1,103 @@
 * {
-    overflow-x: hidden;
-    padding: 0px !important;
-    margin: 0px !important;
-  }
-  .v7_2 {
-    width: 100%;
-    height: 1024px;
-    background: rgba(255,255,255,1);
-    opacity: 1;
-    position: relative;
-    top: 0px;
-    left: 0px;
-    overflow: hidden;
-  }
-  .v15_10 {
-    width: 100%;
-    height: 91px;
-    background: rgba(255,0,53,1);
-    opacity: 1;
-    position: relative;
-    top: 0px;
-    left: 0px;
-    overflow: hidden;
-  }
-  .welcome {
-    width: 500px;
-    color: rgba(248,0,0,1);
-    background-color: blue;
-    position: absolute;
-    margin: 0 auto;
-    font-family: Scada;
-    font-weight: Regular;
-    font-size: 64px;
-    opacity: 1;
-    text-align: left;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: 'Scada', sans-serif;
+}
 
   .title{
       width: 100vw;
       display: flex;
   }
-  .email{
-    width: 202px;
-    color: rgba(0,0,0,1);
-    position: absolute;
-    top: 340px;
-    left: 326px;
-    font-family: Scada;
-    font-weight: Regular;
-    font-size: 36px;
-    opacity: 1;
-    text-align: left;
-  }
-  .password{
-    width: 202px;
-    color: rgba(0,0,0,1);
-    position: absolute;
-    top: 411px;
-    left: 262px;
-    font-family: Scada;
-    font-weight: Regular;
-    font-size: 36px;
-    opacity: 1;
-    text-align: left;
-  }
-  .v15_14 {
-    width: 545px;
-    height: 50px;
-    background: rgba(227,226,226,1);
-    opacity: 1;
-    position: absolute;
-    top: 340px;
-    left: 448px;
-    border-top-left-radius: 100px;
-    border-top-right-radius: 100px;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
-    overflow: hidden;
-  }
-  .v15_16 {
-    width: 545px;
-    height: 50px;
-    background: rgba(227,226,226,1);
-    opacity: 1;
-    position: absolute;
-    top: 411px;
-    left: 448px;
-    border-top-left-radius: 100px;
-    border-top-right-radius: 100px;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
-    overflow: hidden;
-  }
-  .v15_17 {
-    width: 321px;
-    height: 56px;
-    background: rgba(131,3,205,1);
-    opacity: 1;
-    position: absolute;
-    top: 512px;
-    left: 558px;
-    border-top-left-radius: 100px;
-    border-top-right-radius: 100px;
-    border-bottom-left-radius: 100px;
-    border-bottom-right-radius: 100px;
-    overflow: hidden;
-  }
+
+
   .submit{
     width: 202px;
     color: rgba(255,255,255,1);
-    position: absolute;
-    top: 514px;
-    left: 668px;
-    font-family: Scada;
-    font-weight: Regular;
     font-size: 36px;
     opacity: 1;
     text-align: left;
   }
-  .v15_25 {
-    width: 171px;
-    color: rgba(0,0,0,1);
-    position: absolute;
-    top: 596px;
-    left: 633px;
-    font-family: Scada;
-    font-weight: Regular;
-    font-size: 24px;
-    opacity: 1;
-    text-align: left;
+
+  .login-container {
+    width: 100vw;
   }
-  .v15_26 {
-    width: 160px;
-    color: rgba(0,0,0,1);
-    position: absolute;
-    top: 632px;
-    left: 640px;
-    font-family: Scada;
-    font-weight: Regular;
-    font-size: 24px;
-    opacity: 1;
-    text-align: left;
+
+  .inner-login-container {
+    width: 35vw;
+    background-color: rgb(190, 181, 181);
+    margin: 0 auto;
+    padding: 30px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
   }
-  .v15_107 {
-    width: 142px;
-    height: 85px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    opacity: 1;
-    position: absolute;
-    top: 6px;
-    left: 27px;
-    border-top-left-radius: 43px;
-    border-top-right-radius: 43px;
-    border-bottom-left-radius: 43px;
-    border-bottom-right-radius: 43px;
-    overflow: hidden;
+
+  .login-title {
+    font-size: 50px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+  }
+
+  label {
+    display: flex;
+    align-items: center;
+  }
+
+  .email {
+    font-size: 36px;
+    margin-bottom: 10px;
+  }
+  
+  .email input {
+    margin-left: 20px;
+    width: 2500px;
+    height: 30px;
+    border-radius: 5px;
+    padding: 4px;
+    border: none;
+    font-size:24px;
+  }
+
+  .password {
+    font-size: 36px;
+    margin-bottom: 10px;
+  }
+
+  .password input {
+    margin-left: 20px;
+    width: 2500px;
+    height: 30px;
+    border-radius: 5px;
+    padding: 4px;
+    border: none;
+    font-size:24px;
+  }
+
+  .img-container {
+    width: 100vw;
+    display: flex;
+    margin-bottom: -5vw;
+  }
+
+  img {
+    margin: 0 auto;
+    width: 20vw;
+  }
+
+  button {
+    height: 50px;
+    width: 130px;
+    padding: 2px;
+    font-size: 24px;
+    border-radius: 5px;
+    background-color: #8303CD;
+    color: white;
+    border: none;
+  }
+
+  button:hover {
+    cursor: pointer;
+    background-color: #a759d4;
   }
 
 
