--- a/client/src/components/Signup.css
+++ b/client/src/components/Signup.css
@@ -147,7 +147,7 @@
     border-bottom-right-radius: 100px;
     overflow: hidden;
   }
-  .loginButton {
+  .signupButton {
     width: 321px;
     height: 56px;
     background: rgba(131,3,205,1);
@@ -160,6 +160,7 @@
     border-bottom-left-radius: 100px;
     border-bottom-right-radius: 100px;
     overflow: hidden;
+    cursor:pointer;
   }
   .fbButton {
     width: 413px;
